--- a/third_place/thirdplace/templates/thirdplace/bevbuilder.html
+++ b/third_place/thirdplace/templates/thirdplace/bevbuilder.html
@@ -35,26 +35,26 @@
 
             <h1>Flavors</h1>
                 <ul class='modification'>
-                    <li><label for="quanitity">Mocha</label><input min="0" max="99" type="number" name="quantity"/></li>
-                    <li><label for="quanitity">White Mocha</label><input min="0" max="99" type="number" name="quantity"/></li>
-                    <li><label for="quanitity">Chai</label><input min="0" max="99" type="number" name="quantity"/></li>
-                    <li><label for="quanitity">Vanilla</label><input min="0" max="99" type="number" name="quantity"/></li>
-                    <li><label for="quanitity">Hazelnut</label><input min="0" max="99" type="number" name="quantity"/></li>
-                    <li><label for="quanitity">Cinnamon Dolce</label><input min="0" max="99" type="number" name="quantity"/></li>
-                    <li><label for="quanitity">Toffee Nut</label><input min="0" max="99" type="number" name="quantity"/></li>
-                    <li><label for="quanitity">Vanilla (SF)</label><input min="0" max="99" type="number" name="quantity"/></li>
-                    <li><label for="quanitity">Cinnamon Dolce (SF)</label><input min="0" max="99" type="number" name="quantity"/></li>
+                    <li><label for="quantity">Mocha</label><input min="0" max="99" type="number" name="quantity"/></li>
+                    <li><label for="quantity">White Mocha</label><input min="0" max="99" type="number" name="quantity"/></li>
+                    <li><label for="quantity">Chai</label><input min="0" max="99" type="number" name="quantity"/></li>
+                    <li><label for="quantity">Vanilla</label><input min="0" max="99" type="number" name="quantity"/></li>
+                    <li><label for="quantity">Hazelnut</label><input min="0" max="99" type="number" name="quantity"/></li>
+                    <li><label for="quantity">Cinnamon Dolce</label><input min="0" max="99" type="number" name="quantity"/></li>
+                    <li><label for="quantity">Toffee Nut</label><input min="0" max="99" type="number" name="quantity"/></li>
+                    <li><label for="quantity">Vanilla (SF)</label><input min="0" max="99" type="number" name="quantity"/></li>
+                    <li><label for="quantity">Cinnamon Dolce (SF)</label><input min="0" max="99" type="number" name="quantity"/></li>
                 </ul>
 
                 <h1>Milk</h1>
                 <ul class='modification'>
-                    <li><label for="quanitity">Whole Milk</label><input type="radio" name="quantity"/></li>
-                    <li><label for="quanitity">2% Milk</label><input type="radio" name="quantity"/></li>
-                    <li><label for="quanitity">Nonfat Milk</label><input type="radio" name="quantity"/></li>
-                    <li><label for="quanitity">Almond Milk</label><input type="radio" name="quantity"/></li>
-                    <li><label for="quanitity">Soy Milk</label><input type="radio" name="quantity"/></li>
-                    <li><label for="quanitity">Coconut Milk Dolce</label><input type="radio" name="quantity"/></li>
-                    <li><label for="quanitity">Oat Milk</label><input type="radio" name="quantity"/></li>
+                    <li><label for="quantity">Whole Milk</label><input type="radio" name="quantity"/></li>
+                    <li><label for="quantity">2% Milk</label><input type="radio" name="quantity"/></li>
+                    <li><label for="quantity">Nonfat Milk</label><input type="radio" name="quantity"/></li>
+                    <li><label for="quantity">Almond Milk</label><input type="radio" name="quantity"/></li>
+                    <li><label for="quantity">Soy Milk</label><input type="radio" name="quantity"/></li>
+                    <li><label for="quantity">Coconut Milk Dolce</label><input type="radio" name="quantity"/></li>
+                    <li><label for="quantity">Oat Milk</label><input type="radio" name="quantity"/></li>
                 </ul>
         </div>
         <div>
@@ -63,25 +63,25 @@
         <div class='modRight'>
             <h1>Modifications</h1>
                 <ul class='modification'>
-                    <li><label for="quanitity">Whipped Cream</label><input type="radio" name="quantity"/></li>
-                    <li><label for="quanitity">Caramel Drizzle</label><input type="radio" name="quantity"/></li>
-                    <li><label for="quanitity">Mocha Drizzle</label><input type="radio" name="quantity"/></li>
-                    <li><label for="quanitity">Upside Down</label><input type="radio" name="quantity"/></li>
-                    <li><label for="quanitity">Double Blended</label><input type="radio" name="quantity"/></li>
-                    <li><label for="quanitity">Ice</label><input type="radio" name="quantity"/></li>
-                    <li><label for="quanitity">Cinnamon</label><input type="radio" name="quantity"/></li>
-                    <li><label for="quanitity">Upside Down</label><input type="radio" name="quantity"/></li>
-                    <li><label for="quanitity">Double Blended</label><input type="radio" name="quantity"/></li>
-                    <li><label for="quanitity">Ice</label><input type="radio" name="quantity"/></li>
+                    <li><label for="quantity">Whipped Cream</label><input type="radio" name="quantity"/></li>
+                    <li><label for="quantity">Caramel Drizzle</label><input type="radio" name="quantity"/></li>
+                    <li><label for="quantity">Mocha Drizzle</label><input type="radio" name="quantity"/></li>
+                    <li><label for="quantity">Upside Down</label><input type="radio" name="quantity"/></li>
+                    <li><label for="quantity">Double Blended</label><input type="radio" name="quantity"/></li>
+                    <li><label for="quantity">Ice</label><input type="radio" name="quantity"/></li>
+                    <li><label for="quantity">Cinnamon</label><input type="radio" name="quantity"/></li>
+                    <li><label for="quantity">Upside Down</label><input type="radio" name="quantity"/></li>
+                    <li><label for="quantity">Double Blended</label><input type="radio" name="quantity"/></li>
+                    <li><label for="quantity">Ice</label><input type="radio" name="quantity"/></li>
                 </ul>
 
                 <h1>Espresso</h1>
                 <ul class='modification'>
-                    <li><label for="quanitity">Signature</label><input min="0" max="99" type="number" name="quantity"/></li>
-                    <li><label for="quanitity">Blonde</label><input min="0" max="99" type="number" name="quantity"/></li>
-                    <li><label for="quanitity">Affegato</label><input min="0" max="99" type="number" name="quantity"/></li>
-                    <li><label for="quanitity">Ristretto</label><input type="radio" name="quantity"/></li>
-                    <li><label for="quanitity">Long</label><input type="radio" name="quantity"/></li>
+                    <li><label for="quantity">Signature</label><input min="0" max="99" type="number" name="quantity"/></li>
+                    <li><label for="quantity">Blonde</label><input min="0" max="99" type="number" name="quantity"/></li>
+                    <li><label for="quantity">Affegato</label><input min="0" max="99" type="number" name="quantity"/></li>
+                    <li><label for="quantity">Ristretto</label><input type="radio" name="quantity"/></li>
+                    <li><label for="quantity">Long</label><input type="radio" name="quantity"/></li>
                 </ul>
         </div>
 
