--- a/third_place/thirdplace/templates/thirdplace/index.html
+++ b/third_place/thirdplace/templates/thirdplace/index.html
@@ -1,33 +1,7 @@
+{% extends thirdplace/wrapper.html %}
+{% block content %}
 {% load static %}
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <link rel="stylesheet" href="{% static 'thirdplace/indexStyleSheet.css' %}">
-    <link rel="stylesheet" href="{% static 'thirdplace/navbarStyleSheet.css' %}">
-  </head>
-  <body>
-    <nav class="navbar">
-        <img src="{% static 'thirdplace/sblogo.svg' %}" alt="Coffee Masters" class="Logo"/>
-        <ul class="nav-links">
-            <a href="{% url 'index' %}" class='blkLink'>
-                <li>Home</li>
-            </a>
-            <a href="{% url 'bevbuilder' %}" class='blkLink'>
-                <li>Beverage Builder</li>
-            </a>
-            <a href="{% url 'browser' %}" class='blkLink'>
-                <li>Browse</li>
-            </a>
-        </ul>
-        <ul class="signUp">
-            <a href="{% url 'login' %}" class='blkLink'>
-                <li class='signIn'>Sign In</li>
-            </a>
-            <a href="{% url 'signup' %}" class='blkLink'>
-                <li class='joinNow'>Sign Up</li>
-            </a>
-        </ul>
-    </nav>
+
     <div class='bevBanner'>
         <img src="{% static 'thirdplace/frap.png' %}" alt="Fraps" class="bevPNG"/>
         <ul class = 'bevText'>
@@ -44,5 +18,4 @@
             <li class = 'sbutton-browse'>Get Started</li>
         </ul>
     </div>
-  </body>
-</html>
+{% endblock %}
