--- a/third_place/thirdplace/templates/thirdplace/wrapper.html
+++ b/third_place/thirdplace/templates/thirdplace/wrapper.html
@@ -30,8 +30,8 @@
             </a>
         </ul>
     </nav>
-    {% block content%}
+    {% block content %}
    <!-- Insertion point for body of page -->
-
+    {% endblock %}
   </body>
 </html>
