--- a/third_place/thirdplace/static/thirdplace/bevbuilderStyleSheet.css
+++ b/third_place/thirdplace/static/thirdplace/bevbuilderStyleSheet.css
@@ -20,7 +20,7 @@
   background-color: #1e3932;
 }
 .bevBuilder {
-  height: 100vh;
+  height: 100%;
   background-color: #d4e9e2;
 }
 .modification {
@@ -35,7 +35,7 @@ h1 {
   text-align: center;
   color: #1e3932;
 }
-p {
+.bannertxt {
   color: white;
   font-size: 20px;
   letter-spacing: 3px;
@@ -57,4 +57,139 @@ input[type="radio"] {
   letter-spacing: 3px;
   text-transform: uppercase;
   padding: 20px;
+}
+section {
+  display: flex;
+  flex-flow: row wrap;
+}
+section > div {
+  flex: 1;
+  padding: 0.5rem;
+}
+input[type="radio"] {
+  display: none;
+}
+input[type="radio"]:not(:disabled) ~ .type {
+  cursor: pointer;
+}
+input[type="radio"]:disabled ~ .type {
+  color: hsla(150, 5%, 75%, 1);
+  border-color: hsla(150, 5%, 75%, 1);
+  box-shadow: none;
+  cursor: not-allowed;
+}
+.type {
+  height: 100%;
+  display: block;
+  background: white;
+  border: 2px solid #006241;
+  border-radius: 20px;
+  padding: 1rem;
+  margin-bottom: 1rem;
+  text-align: center;
+  box-shadow: 0px 3px 10px -2px hsla(150, 5%, 65%, 0.5);
+  position: relative;
+}
+input[type="radio"]:checked + .type {
+  background: #008248;
+  color: hsla(215, 0%, 100%, 1);
+  box-shadow: 0px 0px 20px #006241;
+}
+input[type="radio"]:checked + .type::after {
+  color: hsla(215, 5%, 25%, 1);
+  font-family: FontAwesome;
+  border: 2px solid #008248;
+  content: "\f00c";
+  font-size: 24px;
+  position: absolute;
+  top: -25px;
+  left: 50%;
+  transform: translateX(-50%);
+  height: 50px;
+  width: 50px;
+  line-height: 50px;
+  text-align: center;
+  border-radius: 50%;
+  background: white;
+  box-shadow: 0px 2px 5px -2px hsla(0, 0%, 0%, 0.25);
+}
+
+p {
+  font-weight: 900;
+}
+
+@media only screen and (max-width: 700px) {
+  section {
+    flex-direction: column;
+  }
+}
+.submit-btn {
+  width: 20%;
+  color: #006241;
+  padding: 20px 24px;
+  border-radius: 12px;
+  cursor: pointer;
+  outline: none;
+  border: 3px solid #006241;
+  background-color: transparent;
+  font-size: 16px;
+  font-weight: 600;
+  text-transform: uppercase;
+  letter-spacing: 3px;
+}
+
+.submit-btn:hover,
+.submit-btn:focus {
+  background-color: #008248;
+  transition: 0.75s ease;
+  color: white;
+}
+
+.button {
+  position: relative;
+  height: 200px;
+  padding: 80px;
+  text-align: center;
+}
+input[type="number"] {
+  margin-right: 175px;
+}
+.flavor {
+  height: 100%;
+  width: 100%;
+  display: block;
+  background: white;
+  border: 2px solid #006241;
+  border-radius: 20px;
+  padding: 1rem;
+  margin-bottom: 1rem;
+  text-align: center;
+  box-shadow: 0px 3px 10px -2px hsla(150, 5%, 65%, 0.5);
+  position: relative;
+}
+.esp {
+  width: 100px;
+  height: 100px;
+  display: block;
+  background: white;
+  border: 2px solid #006241;
+  border-radius: 20px;
+  padding: 1rem;
+  margin-bottom: 1rem;
+  text-align: center;
+  box-shadow: 0px 3px 10px -2px hsla(150, 5%, 65%, 0.5);
+  position: relative;
+}
+.shots {
+  padding: 100px;
+  text-align: center;
+}
+.bevname {
+  width: 100%;
+  padding: 15px;
+  font-size: 20px;
+  border-radius: 12px;
+  outline: none;
+  border: none;
+  margin-bottom: 20px;
 }
