--- a/third_place/thirdplace/templates/thirdplace/signup.html
+++ b/third_place/thirdplace/templates/thirdplace/signup.html
@@ -9,15 +9,29 @@
             <div class='signup-green'></div>
             <div class='login-form'>
                 <h1 class='login-heading'>Sign Up</h1>
-                <form>
+                <form method = "post">
+                    {% csrf_token %}
+                    
+                    {% for field in form %}
+                        
+                            {{ field }}
+                            {% for error in field.errors %}
+                                <p style="color: red">{{ error }}</p>
+                            {% endfor %}
+                        
+                    {% endfor %}
+                    
+                    <!-- 
                     <input type='text' name='username' placeholder="Username" required/>
                     <input type='password' name='password' placeholder="Password" required/>
                     <input type='text' name='first_name' placeholder="First Name" required/>
                     <input type='text' name='last_name' placeholder="Last Name" required/>
                     <input type='text' name='email' placeholder="Email Address" required/>
                     <input type='text' name='city' placeholder="City" required/>
-                    <input type='text' name='st' placeholder="State" required/>
-                    <button class='login-btn'>Sign Up</button>
+                    <input type='text' name='st' placeholder="State" required/> 
+                    -->
+                    <button class='login-btn' type="submit">Sign Up</button>
+                    
                 </form>
             </div>        
         </div>
