add login and logout logic for page rendering and processing of user logins

--- a/third_place/thirdplace/templates/thirdplace/bevbuilder.html
+++ b/third_place/thirdplace/templates/thirdplace/bevbuilder.html
@@ -63,7 +63,7 @@
                     <input type="radio" id="icedlatte" name="beverageType" value="Iced Latte">
                     <label for="icedlatte" class="type">
                         <h2>Iced Latte</h2>
-                        <p>Cool down on a hot summer day with our juicy refreshers.</p>  
+                        <p>Cool down on a hot summer day a refreshing cold espresso beverage.</p>  
                     </label>
                 </div>
             
