--- a/third_place/thirdplace/templates/thirdplace/login.html
+++ b/third_place/thirdplace/templates/thirdplace/login.html
@@ -11,8 +11,17 @@
               <h1 class='login-heading'>Sign In</h1>
               <form method="post">
                 {% csrf_token %}
-                  <input type='text' name='username' placeholder="Username" required/>
+                {% for field in form %}
+                        
+                    {{ field }}
+                    {% for error in field.errors %}
+                      <p style="color: red">{{ error }}</p>
+                    {% endfor %}
+                        
+                {% endfor %}
+                  <!-- <input type='text' name='username' placeholder="Username" required/>
                   <input type='password' name='password' placeholder="Password" required/>
+                  -->
                   <button class='login-btn' type="submit">Login</button>
                   <h3 class='not_a_member'>Not a Member? Sign up <a href="{% url 'signup' %}">Here</a></h3>
               </form>
